grammar/PlayScriptParser.js
// Generated from .\grammar\PlayScript.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var PlayScriptListener = require('./PlayScriptListener').PlayScriptListener;
var grammarFileName = "PlayScript.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'Number'", "'String'", "'var'", "'boolean'", 
                     "'break'", "'byte'", "'case'", "'catch'", "'char'", 
                     "'class'", "'const'", "'continue'", "'default'", "'do'", 
                     "'double'", "'else'", "'enum'", "'extends'", "'final'", 
                     "'finally'", "'float'", "'for'", "'if'", "'implements'", 
                     "'import'", "'instanceof'", "'int'", "'interface'", 
                     "'long'", "'native'", "'new'", "'package'", "'private'", 
                     "'protected'", "'public'", "'return'", "'short'", "'super'", 
                     "'switch'", "'this'", "'void'", "'while'", null, null, 
                     null, null, null, "'null'", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "';'", "','", "'.'", "'...'", "'@'", 
                     "'::'", "'='", "'>'", "'<'", "'!'", "'~'", "'?'", "':'", 
                     "'->'", "'=='", "'<='", "'>='", "'!='", "'&&'", "'||'", 
                     "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'&'", 
                     "'|'", "'^'", "'%'", "'+='", "'-='", "'*='", "'/='", 
                     "'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='", "'>>>='" ];

var symbolicNames = [ null, null, null, null, "BOOLEAN", "BREAK", "BYTE", 
                      "CASE", "CATCH", "CHAR", "CLASS", "CONST", "CONTINUE", 
                      "DEFAULT", "DO", "DOUBLE", "ELSE", "ENUM", "EXTENDS", 
                      "FINAL", "FINALLY", "FLOAT", "FOR", "IF", "IMPLEMENTS", 
                      "IMPORT", "INSTANCEOF", "INT", "INTERFACE", "LONG", 
                      "NATIVE", "NEW", "PACKAGE", "PRIVATE", "PROTECTED", 
                      "PUBLIC", "RETURN", "SHORT", "SUPER", "SWITCH", "THIS", 
                      "VOID", "WHILE", "IntegerLiteral", "FloatingPointLiteral", 
                      "BooleanLiteral", "CharacterLiteral", "StringLiteral", 
                      "NullLiteral", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", "ELLIPSIS", 
                      "AT", "COLONCOLON", "ASSIGN", "GT", "LT", "BANG", 
                      "TILDE", "QUESTION", "COLON", "ARROW", "EQUAL", "LE", 
                      "GE", "NOTEQUAL", "AND", "OR", "INC", "DEC", "ADD", 
                      "SUB", "MUL", "DIV", "BITAND", "BITOR", "CARET", "MOD", 
                      "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
                      "AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", 
                      "LSHIFT_ASSIGN", "RSHIFT_ASSIGN", "URSHIFT_ASSIGN", 
                      "IDENTIFIER", "WS", "COMMENT", "LINE_COMMENT" ];

var ruleNames =  [ "literal", "primitiveType", "variableDeclaratorId", "arrayInitializer", 
                   "variableInitializer", "variableDeclarator", "variableDeclarators", 
                   "blockStatement", "blockStatements", "block", "parExpression", 
                   "forInit", "enhancedForControl", "forControl", "switchLabel", 
                   "switchBlockStatementGroup", "statement", "expression", 
                   "expressionList", "primary", "typeType" ];

function PlayScriptParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

PlayScriptParser.prototype = Object.create(antlr4.Parser.prototype);
PlayScriptParser.prototype.constructor = PlayScriptParser;

Object.defineProperty(PlayScriptParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

PlayScriptParser.EOF = antlr4.Token.EOF;
PlayScriptParser.T__0 = 1;
PlayScriptParser.T__1 = 2;
PlayScriptParser.T__2 = 3;
PlayScriptParser.BOOLEAN = 4;
PlayScriptParser.BREAK = 5;
PlayScriptParser.BYTE = 6;
PlayScriptParser.CASE = 7;
PlayScriptParser.CATCH = 8;
PlayScriptParser.CHAR = 9;
PlayScriptParser.CLASS = 10;
PlayScriptParser.CONST = 11;
PlayScriptParser.CONTINUE = 12;
PlayScriptParser.DEFAULT = 13;
PlayScriptParser.DO = 14;
PlayScriptParser.DOUBLE = 15;
PlayScriptParser.ELSE = 16;
PlayScriptParser.ENUM = 17;
PlayScriptParser.EXTENDS = 18;
PlayScriptParser.FINAL = 19;
PlayScriptParser.FINALLY = 20;
PlayScriptParser.FLOAT = 21;
PlayScriptParser.FOR = 22;
PlayScriptParser.IF = 23;
PlayScriptParser.IMPLEMENTS = 24;
PlayScriptParser.IMPORT = 25;
PlayScriptParser.INSTANCEOF = 26;
PlayScriptParser.INT = 27;
PlayScriptParser.INTERFACE = 28;
PlayScriptParser.LONG = 29;
PlayScriptParser.NATIVE = 30;
PlayScriptParser.NEW = 31;
PlayScriptParser.PACKAGE = 32;
PlayScriptParser.PRIVATE = 33;
PlayScriptParser.PROTECTED = 34;
PlayScriptParser.PUBLIC = 35;
PlayScriptParser.RETURN = 36;
PlayScriptParser.SHORT = 37;
PlayScriptParser.SUPER = 38;
PlayScriptParser.SWITCH = 39;
PlayScriptParser.THIS = 40;
PlayScriptParser.VOID = 41;
PlayScriptParser.WHILE = 42;
PlayScriptParser.IntegerLiteral = 43;
PlayScriptParser.FloatingPointLiteral = 44;
PlayScriptParser.BooleanLiteral = 45;
PlayScriptParser.CharacterLiteral = 46;
PlayScriptParser.StringLiteral = 47;
PlayScriptParser.NullLiteral = 48;
PlayScriptParser.LPAREN = 49;
PlayScriptParser.RPAREN = 50;
PlayScriptParser.LBRACE = 51;
PlayScriptParser.RBRACE = 52;
PlayScriptParser.LBRACK = 53;
PlayScriptParser.RBRACK = 54;
PlayScriptParser.SEMI = 55;
PlayScriptParser.COMMA = 56;
PlayScriptParser.DOT = 57;
PlayScriptParser.ELLIPSIS = 58;
PlayScriptParser.AT = 59;
PlayScriptParser.COLONCOLON = 60;
PlayScriptParser.ASSIGN = 61;
PlayScriptParser.GT = 62;
PlayScriptParser.LT = 63;
PlayScriptParser.BANG = 64;
PlayScriptParser.TILDE = 65;
PlayScriptParser.QUESTION = 66;
PlayScriptParser.COLON = 67;
PlayScriptParser.ARROW = 68;
PlayScriptParser.EQUAL = 69;
PlayScriptParser.LE = 70;
PlayScriptParser.GE = 71;
PlayScriptParser.NOTEQUAL = 72;
PlayScriptParser.AND = 73;
PlayScriptParser.OR = 74;
PlayScriptParser.INC = 75;
PlayScriptParser.DEC = 76;
PlayScriptParser.ADD = 77;
PlayScriptParser.SUB = 78;
PlayScriptParser.MUL = 79;
PlayScriptParser.DIV = 80;
PlayScriptParser.BITAND = 81;
PlayScriptParser.BITOR = 82;
PlayScriptParser.CARET = 83;
PlayScriptParser.MOD = 84;
PlayScriptParser.ADD_ASSIGN = 85;
PlayScriptParser.SUB_ASSIGN = 86;
PlayScriptParser.MUL_ASSIGN = 87;
PlayScriptParser.DIV_ASSIGN = 88;
PlayScriptParser.AND_ASSIGN = 89;
PlayScriptParser.OR_ASSIGN = 90;
PlayScriptParser.XOR_ASSIGN = 91;
PlayScriptParser.MOD_ASSIGN = 92;
PlayScriptParser.LSHIFT_ASSIGN = 93;
PlayScriptParser.RSHIFT_ASSIGN = 94;
PlayScriptParser.URSHIFT_ASSIGN = 95;
PlayScriptParser.IDENTIFIER = 96;
PlayScriptParser.WS = 97;
PlayScriptParser.COMMENT = 98;
PlayScriptParser.LINE_COMMENT = 99;

PlayScriptParser.RULE_literal = 0;
PlayScriptParser.RULE_primitiveType = 1;
PlayScriptParser.RULE_variableDeclaratorId = 2;
PlayScriptParser.RULE_arrayInitializer = 3;
PlayScriptParser.RULE_variableInitializer = 4;
PlayScriptParser.RULE_variableDeclarator = 5;
PlayScriptParser.RULE_variableDeclarators = 6;
PlayScriptParser.RULE_blockStatement = 7;
PlayScriptParser.RULE_blockStatements = 8;
PlayScriptParser.RULE_block = 9;
PlayScriptParser.RULE_parExpression = 10;
PlayScriptParser.RULE_forInit = 11;
PlayScriptParser.RULE_enhancedForControl = 12;
PlayScriptParser.RULE_forControl = 13;
PlayScriptParser.RULE_switchLabel = 14;
PlayScriptParser.RULE_switchBlockStatementGroup = 15;
PlayScriptParser.RULE_statement = 16;
PlayScriptParser.RULE_expression = 17;
PlayScriptParser.RULE_expressionList = 18;
PlayScriptParser.RULE_primary = 19;
PlayScriptParser.RULE_typeType = 20;


function LiteralContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PlayScriptParser.RULE_literal;
    return this;
}

LiteralContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LiteralContext.prototype.constructor = LiteralContext;

LiteralContext.prototype.IntegerLiteral = function() {
    return this.getToken(PlayScriptParser.IntegerLiteral, 0);
};

LiteralContext.prototype.FloatingPointLiteral = function() {
    return this.getToken(PlayScriptParser.FloatingPointLiteral, 0);
};

LiteralContext.prototype.BooleanLiteral = function() {
    return this.getToken(PlayScriptParser.BooleanLiteral, 0);
};

LiteralContext.prototype.CharacterLiteral = function() {
    return this.getToken(PlayScriptParser.CharacterLiteral, 0);
};

LiteralContext.prototype.StringLiteral = function() {
    return this.getToken(PlayScriptParser.StringLiteral, 0);
};

LiteralContext.prototype.NullLiteral = function() {
    return this.getToken(PlayScriptParser.NullLiteral, 0);
};

LiteralContext.prototype.enterRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.enterLiteral(this);
	}
};

LiteralContext.prototype.exitRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.exitLiteral(this);
	}
};




PlayScriptParser.LiteralContext = LiteralContext;

PlayScriptParser.prototype.literal = function() {

    var localctx = new LiteralContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, PlayScriptParser.RULE_literal);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 42;
        _la = this._input.LA(1);
        if(!(((((_la - 43)) & ~0x1f) == 0 && ((1 << (_la - 43)) & ((1 << (PlayScriptParser.IntegerLiteral - 43)) | (1 << (PlayScriptParser.FloatingPointLiteral - 43)) | (1 << (PlayScriptParser.BooleanLiteral - 43)) | (1 << (PlayScriptParser.CharacterLiteral - 43)) | (1 << (PlayScriptParser.StringLiteral - 43)) | (1 << (PlayScriptParser.NullLiteral - 43)))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function PrimitiveTypeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PlayScriptParser.RULE_primitiveType;
    return this;
}

PrimitiveTypeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PrimitiveTypeContext.prototype.constructor = PrimitiveTypeContext;


PrimitiveTypeContext.prototype.enterRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.enterPrimitiveType(this);
	}
};

PrimitiveTypeContext.prototype.exitRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.exitPrimitiveType(this);
	}
};




PlayScriptParser.PrimitiveTypeContext = PrimitiveTypeContext;

PlayScriptParser.prototype.primitiveType = function() {

    var localctx = new PrimitiveTypeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, PlayScriptParser.RULE_primitiveType);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 44;
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << PlayScriptParser.T__0) | (1 << PlayScriptParser.T__1) | (1 << PlayScriptParser.T__2))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function VariableDeclaratorIdContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PlayScriptParser.RULE_variableDeclaratorId;
    return this;
}

VariableDeclaratorIdContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VariableDeclaratorIdContext.prototype.constructor = VariableDeclaratorIdContext;

VariableDeclaratorIdContext.prototype.IDENTIFIER = function() {
    return this.getToken(PlayScriptParser.IDENTIFIER, 0);
};

VariableDeclaratorIdContext.prototype.LBRACK = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(PlayScriptParser.LBRACK);
    } else {
        return this.getToken(PlayScriptParser.LBRACK, i);
    }
};


VariableDeclaratorIdContext.prototype.RBRACK = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(PlayScriptParser.RBRACK);
    } else {
        return this.getToken(PlayScriptParser.RBRACK, i);
    }
};


VariableDeclaratorIdContext.prototype.enterRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.enterVariableDeclaratorId(this);
	}
};

VariableDeclaratorIdContext.prototype.exitRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.exitVariableDeclaratorId(this);
	}
};




PlayScriptParser.VariableDeclaratorIdContext = VariableDeclaratorIdContext;

PlayScriptParser.prototype.variableDeclaratorId = function() {

    var localctx = new VariableDeclaratorIdContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, PlayScriptParser.RULE_variableDeclaratorId);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 46;
        this.match(PlayScriptParser.IDENTIFIER);
        this.state = 51;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===PlayScriptParser.LBRACK) {
            this.state = 47;
            this.match(PlayScriptParser.LBRACK);
            this.state = 48;
            this.match(PlayScriptParser.RBRACK);
            this.state = 53;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ArrayInitializerContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PlayScriptParser.RULE_arrayInitializer;
    return this;
}

ArrayInitializerContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ArrayInitializerContext.prototype.constructor = ArrayInitializerContext;

ArrayInitializerContext.prototype.LBRACE = function() {
    return this.getToken(PlayScriptParser.LBRACE, 0);
};

ArrayInitializerContext.prototype.RBRACE = function() {
    return this.getToken(PlayScriptParser.RBRACE, 0);
};

ArrayInitializerContext.prototype.variableInitializer = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(VariableInitializerContext);
    } else {
        return this.getTypedRuleContext(VariableInitializerContext,i);
    }
};

ArrayInitializerContext.prototype.COMMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(PlayScriptParser.COMMA);
    } else {
        return this.getToken(PlayScriptParser.COMMA, i);
    }
};


ArrayInitializerContext.prototype.enterRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.enterArrayInitializer(this);
	}
};

ArrayInitializerContext.prototype.exitRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.exitArrayInitializer(this);
	}
};




PlayScriptParser.ArrayInitializerContext = ArrayInitializerContext;

PlayScriptParser.prototype.arrayInitializer = function() {

    var localctx = new ArrayInitializerContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, PlayScriptParser.RULE_arrayInitializer);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 54;
        this.match(PlayScriptParser.LBRACE);
        this.state = 66;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(((((_la - 38)) & ~0x1f) == 0 && ((1 << (_la - 38)) & ((1 << (PlayScriptParser.SUPER - 38)) | (1 << (PlayScriptParser.THIS - 38)) | (1 << (PlayScriptParser.IntegerLiteral - 38)) | (1 << (PlayScriptParser.FloatingPointLiteral - 38)) | (1 << (PlayScriptParser.BooleanLiteral - 38)) | (1 << (PlayScriptParser.CharacterLiteral - 38)) | (1 << (PlayScriptParser.StringLiteral - 38)) | (1 << (PlayScriptParser.NullLiteral - 38)) | (1 << (PlayScriptParser.LPAREN - 38)) | (1 << (PlayScriptParser.LBRACE - 38)) | (1 << (PlayScriptParser.BANG - 38)) | (1 << (PlayScriptParser.TILDE - 38)))) !== 0) || ((((_la - 75)) & ~0x1f) == 0 && ((1 << (_la - 75)) & ((1 << (PlayScriptParser.INC - 75)) | (1 << (PlayScriptParser.DEC - 75)) | (1 << (PlayScriptParser.ADD - 75)) | (1 << (PlayScriptParser.SUB - 75)) | (1 << (PlayScriptParser.IDENTIFIER - 75)))) !== 0)) {
            this.state = 55;
            this.variableInitializer();
            this.state = 60;
            this._errHandler.sync(this);
            var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                if(_alt===1) {
                    this.state = 56;
                    this.match(PlayScriptParser.COMMA);
                    this.state = 57;
                    this.variableInitializer(); 
                }
                this.state = 62;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
            }

            this.state = 64;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===PlayScriptParser.COMMA) {
                this.state = 63;
                this.match(PlayScriptParser.COMMA);
            }

        }

        this.state = 68;
        this.match(PlayScriptParser.RBRACE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function VariableInitializerContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PlayScriptParser.RULE_variableInitializer;
    return this;
}

VariableInitializerContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VariableInitializerContext.prototype.constructor = VariableInitializerContext;

VariableInitializerContext.prototype.arrayInitializer = function() {
    return this.getTypedRuleContext(ArrayInitializerContext,0);
};

VariableInitializerContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

VariableInitializerContext.prototype.enterRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.enterVariableInitializer(this);
	}
};

VariableInitializerContext.prototype.exitRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.exitVariableInitializer(this);
	}
};




PlayScriptParser.VariableInitializerContext = VariableInitializerContext;

PlayScriptParser.prototype.variableInitializer = function() {

    var localctx = new VariableInitializerContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, PlayScriptParser.RULE_variableInitializer);
    try {
        this.state = 72;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case PlayScriptParser.LBRACE:
            this.enterOuterAlt(localctx, 1);
            this.state = 70;
            this.arrayInitializer();
            break;
        case PlayScriptParser.SUPER:
        case PlayScriptParser.THIS:
        case PlayScriptParser.IntegerLiteral:
        case PlayScriptParser.FloatingPointLiteral:
        case PlayScriptParser.BooleanLiteral:
        case PlayScriptParser.CharacterLiteral:
        case PlayScriptParser.StringLiteral:
        case PlayScriptParser.NullLiteral:
        case PlayScriptParser.LPAREN:
        case PlayScriptParser.BANG:
        case PlayScriptParser.TILDE:
        case PlayScriptParser.INC:
        case PlayScriptParser.DEC:
        case PlayScriptParser.ADD:
        case PlayScriptParser.SUB:
        case PlayScriptParser.IDENTIFIER:
            this.enterOuterAlt(localctx, 2);
            this.state = 71;
            this.expression(0);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function VariableDeclaratorContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PlayScriptParser.RULE_variableDeclarator;
    return this;
}

VariableDeclaratorContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VariableDeclaratorContext.prototype.constructor = VariableDeclaratorContext;

VariableDeclaratorContext.prototype.variableDeclaratorId = function() {
    return this.getTypedRuleContext(VariableDeclaratorIdContext,0);
};

VariableDeclaratorContext.prototype.ASSIGN = function() {
    return this.getToken(PlayScriptParser.ASSIGN, 0);
};

VariableDeclaratorContext.prototype.variableInitializer = function() {
    return this.getTypedRuleContext(VariableInitializerContext,0);
};

VariableDeclaratorContext.prototype.enterRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.enterVariableDeclarator(this);
	}
};

VariableDeclaratorContext.prototype.exitRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.exitVariableDeclarator(this);
	}
};




PlayScriptParser.VariableDeclaratorContext = VariableDeclaratorContext;

PlayScriptParser.prototype.variableDeclarator = function() {

    var localctx = new VariableDeclaratorContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, PlayScriptParser.RULE_variableDeclarator);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 74;
        this.variableDeclaratorId();
        this.state = 77;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===PlayScriptParser.ASSIGN) {
            this.state = 75;
            this.match(PlayScriptParser.ASSIGN);
            this.state = 76;
            this.variableInitializer();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function VariableDeclaratorsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PlayScriptParser.RULE_variableDeclarators;
    return this;
}

VariableDeclaratorsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VariableDeclaratorsContext.prototype.constructor = VariableDeclaratorsContext;

VariableDeclaratorsContext.prototype.typeType = function() {
    return this.getTypedRuleContext(TypeTypeContext,0);
};

VariableDeclaratorsContext.prototype.variableDeclarator = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(VariableDeclaratorContext);
    } else {
        return this.getTypedRuleContext(VariableDeclaratorContext,i);
    }
};

VariableDeclaratorsContext.prototype.COMMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(PlayScriptParser.COMMA);
    } else {
        return this.getToken(PlayScriptParser.COMMA, i);
    }
};


VariableDeclaratorsContext.prototype.enterRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.enterVariableDeclarators(this);
	}
};

VariableDeclaratorsContext.prototype.exitRule = function(listener) {
    if(listener instanceof PlayScriptListener ) {
        listener.exitVariableDeclarators(this);
	}
};




PlayScriptParser.VariableDeclaratorsContext = VariableDeclaratorsContext;

PlayScriptParser.prototype.variableDeclarators = function() {
